[package]
name = "program"
version = "0.1.0"
edition = "2021"
authors = ["godmodegalactus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = ">=1.9.0"
arrayref = "^0.3.6"
serde = "^1.0.118"
bytemuck = "^1.7.2"
bincode = "^1.3.1"

[lib]
name = "writer_utils"
crate-type = ["cdylib", "lib"]